--- a/Retirar.html
+++ b/Retirar.html
@@ -9,10 +9,12 @@
 <body>
     <div class="Container">
         <form action="">
-            <input type="text" id="Nombre">
-            <input type="text" id="Cedula">
-            <input type="password" id="password">
-            <div class="BtnR">
+            <h2>Retiro</h2>
+            <input type="text" id="Nombre" placeholder="Nombre completo">
+            <input type="text" id="Cedula" placeholder="Cedula">
+            <input type="password" id="Code" placeholder="Codigo">
+            <div class="BtnC">
+                <button type="submit" id="Comprobar">Comprobar</button>
                 <button type="submit" id="Regresar">Regresar</button>
             </div> 
         </form>
